Fix problem where page would have 2 scrollbars, one parallax and one not.
- This occured because the wrapper element would just take the size of its parent element, which would end up getting big depending on the page's content

--- a/Website/Website/Pages/NewPortfolio.razor.css
+++ b/Website/Website/Pages/NewPortfolio.razor.css
@@ -17,9 +17,9 @@
     /*will-change: transform;*/
     perspective-origin: center; /* vanishing point in center of screen */
     position: relative; /* make elements in this group relative to the whole pange, because we are going to have to use absolutly positioned elements */
-    /* wrapper should take on the same size as its parent div  */
-    width: 100%;
-    height: 100%;
+    /* vh instead of % because % would adhear to the size of the parent element (the body) which we don't want since that may scroll. Basically we're ditching any scrolling outside this wrapper div. We essentially want this wrapper div to be the new body tag so we kind of want to ditch anything from the body. */
+    width: 100vw;
+    height: 100vh;
     perspective: 1px; /* easy value (translating on z by -1 will make it appear twice as small, so just scale it up by 2) */
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d; /* also do this on the body? */
